2024-02-20T16:18:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7976621949 # 134
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
* notice: last 14d: unq all: 1 5
* notice: prev accum: outdated-unq outdated-all / unq all: 871 1592 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 872 1594 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-06] / []

2024-02-19T16:20:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7962519497 # 131
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-19
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 870 1590 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 871 1592 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-05] / []

2024-02-18T16:17:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7950232474 # 128
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 869 1588 / 875 1599
* notice: next accum: outdated-unq outdated-all / unq all: 870 1590 / 875 1599
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-04] / []

2024-02-17T16:17:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7942865492 # 125