@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-20T16:18:54Z",
+  "timestamp" : "2024-02-21T01:05:05Z",
   "count_outdated" : 1594,
   "uniques_outdated" : 872,
-  "count" : 1599,
-  "uniques" : 875,
+  "count" : 1600,
+  "uniques" : 876,
   "clones" : [
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -28,6 +28,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
